fix cherrypick conflicts from 1.21 branch